# linux-program

./: CMakeLists.txt  run.sh
communicate/: fifo.c  mmap.c  non_blocking_pipe.c  pipe.c  pipe_ps_ef.c
io/: dir.c  dup.c  dup2.c  main.c  my_cat.c  process_fd_only_test.c  stat.c  time.c
network/: byte_sequence.c  client.c  epoll.c  multi_process_server.c  multi_thread_server.c  select.c  server.c
process/: execl.c  fork.c  fork_global_var.c  wait.c  wait_pid.c  zombie_process.c
signal/: alarm.c  kill.c  raise.c  setitimer.c  sigchld.c  signal.c  signset.c
thread/: create_thread.c  mutex_lock.c
